fixed margin on small screens

--- a/scss/partials/_layout.scss
+++ b/scss/partials/_layout.scss
@@ -59,9 +59,12 @@ body {
 
     .phase-wrapper {
         display: flex;
-        align-items: center;
         text-align: center;
         flex-direction: column;
+
+        .moon-wrapper {
+            margin-right: 0;
+        }
 
         h1 {
             text-align: center;
